# threatintel

./: .gitignore  Makefile  README.md
.github/workflows/: publish-image-minime.yml
gemini/: .old.pyproject.toml  README.md  notes.md
gemini/notebooks/: indicator_rag.ipynb
neo4j/: README.md  docker-compose.yaml  load-stix-data.py  values.yaml
neo4j/pattern_matcher/: Dockerfile  README.md  pyproject.toml
neo4j/pattern_matcher/scripts/: load_local.sh
neo4j/pattern_matcher/src/: main.py  match.py  parse.py
neo4j/pattern_matcher/src/patternmatcher/: constants.py  load.py  main.py  parse.py
pattern_matcher/: README.md  resources.yaml  values.yaml
pattern_matcher/resource/: tetragon_process_kprobe_log_example.json
pattern_matcher/scripts/: load_local.sh
pattern_matcher/src/patternmatcher/: load.py  main.py  match.py  parse.py
rag/: pyproject.toml
rag/notebooks/: indicator_rag.ipynb  indicator_rag.md
stix/: README.md
stix/code/: stix-tetragon-log.json
stix/examples/: stix-attack-model.json
