[project]
name = "rag"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lukas Mahler", email = "lukas.mah@outlook.at"},
]
dependencies = [
    "ipykernel>=6.29.5",
    "llama-index-llms-gemini>=0.1.11",
    "llama-index>=0.10.57",
    "google-generativeai>=0.5.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
